# noether-bot

./: .env.sample  .gitignore  main.py  pyproject.toml  readme.md
config/: config.py
database_manager/: database_manager.py
exchange_manager/: binance_exchange.py  exchange.py
logger_manager/: logger_manager.py
models/: hedge_snapshot.py  pool_snapshot.py  position_snapshot.py
risk_manager/: risk_manager.py
strategy_engine/: strategy_engine.py
swap_monitor/: rpc_swap_monitor.py  swap_monitor.py
tui/: data_simulator.py  graph_widget.py  hedge_tui.py  styles.tcss
