[project]
name = "noether-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Suprit Behera",email = "supritb12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "web3 (>=7.12.0,<8.0.0)",
    "ccxt (>=4.4.90,<5.0.0)",
    "textual (>=3.5.0,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "plotext (>=5.3.2,<6.0.0)",
    "textual-plot (>=0.6.1,<0.7.0)",
    "textual-plotext (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.13"
